added sport sources from the us country

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,11 @@
 <ul>
   {{macro.displaySources(business)}}
 </ul>
+<h3> Sports Sources</h3>
+<ul>
+  {{macro.displaySources(sports)}}
+  <ul>
+
 </body>
 {% endblock %}
 </div>
