--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,3 +1,4 @@
+<!--we create a function that loops through the sources_list-->
 {% macro displaySources(sources_list) %}
 
      {% for source_item in sources_list%}
