added a health news source

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,8 +11,16 @@
 <h3> Sports Sources</h3>
 <ul>
   {{macro.displaySources(sports)}}
-  <ul>
+</ul>
 
+<h3> Entertainment Sources<h3>
+  <ul>
+  {{macro.displaySources(entertainment)}}
+</ul>
+<h3>Health Sources</h3>
+<ul>
+  {{macro.displaySources(health)}}
+</ul>
 </body>
 {% endblock %}
 </div>
