--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,11 +7,11 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">News Highlights </a>
+                <a  style="color:white; font-size:25px; font-family: 'Raleway', sans-serif"class="navbar-brand" href="/">News Highlights </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Home</a></li>
+                    <li><a style="color:white; font-size:20px; font-family: 'Raleway', sans-serif "href="/">Home</a></li>
             </div>
 
         </div>
