--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -1,3 +1,6 @@
 {% extends 'base.html'%}{%import 'macros.html' as macro %}
 {% block content %}
+<div class= "container">
+  {{macro.displayArticles(news)}}
+</div>
 {% endblock %}
