added a redirect error template file

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -4,8 +4,15 @@
      {% for source_item in sources_list%}
          <li><a  href ="/news/source_item.id">{{source_item.name}}</a></li>
      {% endfor %}{% endmacro %}
-     {% macro displayArticles(articles_results) %}
-     {% for results in articles_results%}
-     <li>{{article.title}}</li>
 
-{% endmacro %}{% endfor %}
+{% macro displayArticles(articles_results) %}
+    {% for results in articles_results%}
+  <div class ="container">
+    <ul>
+     <li>{{article.title}}</li>
+     <li>{{article.description}}</li>
+    </ul>
+ </div>
+
+    {% endfor %}
+{% endmacro %}
