added jumbotron in index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,13 @@
   {% block content%}
 <body>
 <!--Business sources-->
+<div class="container"
+<div class="jumbotron">
+  <h1>Welcome to the News App</h1>
+  <p> This is an application that allows you to view the latest
+  news from the source of your choice</p>
+</div>
+</div>
 
 <h3 style="font-family: 'Raleway', sans-serif; font-weight: bold"> General Sources </h3>
 <ul>
