added 4 jumbotron classes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,10 +30,15 @@
 
 
 <hr>
+<div class="container">
+  <div class="jumbotron">
+    <div class="row">
 <h3 style="font-family: 'Raleway', sans-serif; font-weight: bold"> Sports Sources</h3>
-<ul>
+
   {{macro.displaySources(sports)}}
-</ul>
+</div>
+</div>
+</div>
 <hr>
 <h3 style="font-family: 'Raleway', sans-serif; font-weight: bold"> Entertainment Sources<h3>
   <ul>
