changed button color

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -40,25 +40,48 @@
 </div>
 </div>
 <hr>
+<div class="container">
+  <div class="jumbotron">
+    <div class="row">
 <h3 style="font-family: 'Raleway', sans-serif; font-weight: bold"> Entertainment Sources<h3>
-  <ul>
+
   {{macro.displaySources(entertainment)}}
-</ul>
+</div>
+</div>
+</div>
+
 <hr>
+<div class="container">
+  <div class="jumbotron">
+    <div class="row">
+
 <h3 style="font-family: 'Raleway', sans-serif; font-weight: bold">Business Sources</h3>
-<ul>
+
   {{macro.displaySources(business)}}
-</ul>
+</div>
+</div>
+</div>
 <hr>
+<div class="container">
+  <div class="jumbotron">
+  </div class="row">
 <h3 style="font-family: 'Raleway', sans-serif; font-weight: bold"> Technology Sources</h3>
-<ul>
+
   {{macro.displaySources(technology)}}
-</ul>
+</div>
+</div>
+</div>
 <hr>
+<div class="container">
+  <div class="jumbotron">
+    <div class="row">
+
 <h3 style="font-family: 'Raleway', sans-serif; font-weight: bold "> Health Sources</h3>
-<ul>
+
   {{macro.displaySources(health)}}
-</ul>
+</div>
+</div>
+</div>
 
 
 
