changed button  radius

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -64,7 +64,7 @@
 <hr>
 <div class="container">
   <div class="jumbotron">
-  </div class="row">
+  <div class="row">
 <h3 style="font-family: 'Raleway', sans-serif; font-weight: bold"> Technology Sources</h3>
 
   {{macro.displaySources(technology)}}
