--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -3,7 +3,7 @@
 
      {% for source in sources_list%}
      <div class="col-sm-6 col-md-3">
-    <button class="button" style="background-color:purple; padding:20px; text-align:center;font-size:15px; border-radius:12px;" ><a style="color:white;" href ="/article">{{source.name}}</a></button>
+    <button class="button" style="background-color:purple; padding:20px; text-align:center;font-size:15px; border-radius:12px; display: inline-block" ><a style="color:white;" href ="/article">{{source.name}}</a></button>
   </div>
   <br>
      {% endfor %}
