--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -20,10 +20,10 @@
                     </a>
 
                   <div class="caption">
-                      <h5 class="card-title">{{article.title}}</h5>
-                      <p class="card-text">{{article.description}}</p>
-                      <p>Published at: {{article.publishedAt}}<p>
-                      <a class="btn btn-primary" href="{{article.url}}">Click here for more</a>
+                      <h5 class="card-title"><b>Article Title:</b> {{article.title}}</h5>
+                      <p class="card-text"><b>Description:</b>{{article.description}}</p>
+                      <p><b>Published at:</b> {{article.publishedAt}}<p>
+                    <button class="button" style="background-color:purple; border-radius:12px; padding:10px;">  <a style="color:white;" href="{{article.url}}">Click here for more</a></button>
 
 
 
