added a test class to test the articles object

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -20,9 +20,9 @@
                     </a>
 
                   <div class="caption">
-                      <h5 class="card-title"><b>Article Title:</b> {{article.title}}</h5>
-                      <p class="card-text"><b>Description:</b>{{article.description}}</p>
-                      <p><b>Published at:</b> {{article.publishedAt}}<p>
+                      <h5 style="font-family: 'Raleway', sans-serif"class="card-title"><b>Article Title:</b>  {{article.title}}</h5>
+                      <p class="card-text" style="font-family: 'Raleway', sans-serif"><b>Description:</b> {{article.description}}</p>
+                      <pstyle="font-family: 'Raleway', sans-serif"><b>Published at:</b> {{article.publishedAt}}<p>
                     <button class="button" style="background-color:purple; border-radius:12px; padding:10px;">  <a style="color:white;" href="{{article.url}}">Click here for more</a></button>
 
 
